--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ body {
     color: #afe045;
 }
 
-h1{font-size: 3rem;}
-h2{font-size: 2.50rem;}
+h1{font-size: 3rem; color: #fff}
+h2{font-size: 2.50rem; color: #afe045; text-align: center;}
 h3{font-size: 2rem;}
 h4{font-size: 1.5em;}
 h5{font-size: 1.1em;}
@@ -68,11 +68,20 @@ button a i {
 }
 /* Fin Diseño de botones */
 
+/* Pagina activa actualmente en nuestro NAV */
+.active {
+    border-radius: 5px;
+    box-shadow: inset #000000 0px 0px 5px 1px;
+    background-color: #293a22;
+    border: 1px solid #afe045;
+    color: #ffffff; 
+}
+/* Pagina activa actualmente en nuestro NAV */
+
 
 
 /* Inicio Header + NAV */
-
-.header {
+ .header {
     position: relative;
     width: 100%;
     display: flex;
@@ -225,45 +234,123 @@ button a i {
         font-size: 1.7em;
         box-shadow: 0 1px 0 rgba(255, 255, 255, .1);
     }
-}
+} 
 
 /* Fin Header + NAV */
 
-/* Pagina activa actualmente en nuestro NAV */
-.active {
-    border-radius: 5px;
+.header{
+    grid-area: header;
+}
+.main {
+    grid-area: main;
+    height: 50vh;
+    background-image: linear-gradient(0deg, rgba(0,0,0,.5),rgba(0,0,0,.5)),url(../img/header/background.jpg);
+    background-repeat: norepeat;
+    background-position: center;
+    background-size: cover;
+    text-align: center;    
+    gap: 10px;
+}
+.section1{
+    grid-area: section1;}
+.section2{
+    grid-area: section2;}
+.section3{
+    grid-area: section3;}
+.footer{
+    grid-area: footer;}
+
+.container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-areas:
+    "header"
+    "main"
+    "section1"
+    "section2"
+    "section3"
+    "footer";
+}
+
+@media screen and (min-width:992px) {
+    .container{
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        grid-template-areas:
+        "header header header"
+        "main main main"
+        "section1 section1 section2"
+        "section3 section3 section3"
+        "footer footer footer";
+    }
+}
+
+.main h1 {
+    margin-top: 150px;
+}
+
+.section1 {
+    padding: 10px;    
+    background:linear-gradient(to top, #172b1a,#97b35a);  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    border: 1px solid white;
+
+}
+
+.boton {
+    border-radius: 20px;
     box-shadow: inset #000000 0px 0px 5px 1px;
     background-color: #293a22;
     border: 1px solid #afe045;
     color: #ffffff; 
 }
-/* Pagina activa actualmente en nuestro NAV */
 
-/* INICIO MAIN*/
-
-/* Seccion quienes somos*/
-#quienesSomos {
+.section2 {
     display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
     flex-direction: column;
-    height: 90vh;
-    color: #ffffff;
-    background-image: linear-gradient(0deg, rgba(0,0,0,0.8),rgba(0,0,0,0.8))
-    , url("/img/header/background.jpg");
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    background:linear-gradient(to bottom, #172b1a,#849d4f); 
+    border-radius: 5px;
+    box-shadow: inset #000000 0px 0px 5px 1px;
+    background-color: #293a22;
+    border: 1px solid #afe045;
+    color: #ffffff; 
+    
+    gap: 10px;
+}
+.section2 img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+
+}
+.section3 {
+    height: 50vh;    
+    gap: 10px;
+    background-image: linear-gradient(0deg, rgba(0,0,0,.5),rgba(0,0,0,.5)), url(../img/catalogo/fertilizantes.jpg);
+    background-position: cover;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    
+
 }
-#quienesSomos h1 { color:#afe045}
-#quienesSomos p {
-    padding: 5px 20px;
-}
-/* Fin quienes somos */
+
+
+
+
 
 /* Inicio section de página Reprocann.html */
-
 #heroReprocann{
     display: flex;
     align-items: center;
