--- a/css/style.css
+++ b/css/style.css
@@ -553,75 +553,10 @@ table h1 {
 /* Fin section sustrato.html */
 
 
-/* Horarios section de pagina Contacto.html */
-#horarios {
-    height: 100%;
-}
-
-.horarios__container {
-    display: flex;
-    flex-direction: row;
-}
-
-.horarios__elementos{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #293a22;
-}
-
-.horarios__container h3{ 
-    color: #dddddd;
-    padding: 5px 5px;
-}
-
-.horarios__container p{ 
-    color: #dddddd;
-    padding: 5px 5px;
-}
-
-.horarios__container li{ 
-    color: #dddddd;
-    padding: 5px 5px;
-}
-
-#horarios img {
-    width: 50%;
-    height: 80vh;
-    padding: 5px 5px;
-    background-color: #293a22;
-}
-/* Cierre Horarios */
-
 /* Container Mapa + Form section de pagina Contacto.html */
-.container__map-form {
-    display: flex;
-    flex-wrap: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-}
+
 
 /* Mapa */
-#mapa {
-    background-color: #293a22;
-}
-.mapa__container {
-    display: flex;
-    width: 50%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 5px 5px;
-    order: 2;
-}
-
-#mapa h2 {
-    padding: 5px 5px;
-    color: #afe045
-}
-
 #mapa iframe {
     border-radius: 5px;
     box-shadow: 2px 2px 5px 5px;
@@ -631,16 +566,6 @@ table h1 {
 /* Mapa */
 
 /* Form */
-.contacto__form {
-    display: flex;
-    width: 50%;
-    height: 400px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;    
-    order: 1;
-}
-
 .container__form-items {
     border-radius: 5px;
     box-shadow: 2px 2px 5px 5px;
@@ -682,8 +607,75 @@ table h1 {
     margin-top: 5px;
 }
 /* Form */
-/* Fin Seccion Map + Form */
+
+.horarios__img {
+    width: 100%;
+}
+.grid__container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+    "img-grid"
+    "horarios"
+    "mapa"
+    "form";
+}
+.img-grid{grid-area: img-grid;}
+.horarios{grid-area: horarios;}
+.mapa {grid-area: mapa;}
+.form {grid-area: form;}
+
+.horarios__img {
+    width: 70%;
+    height: 50vh;
+}
+
+.horarios__container {    
+    display: flex;
+    padding-top: 20px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.horarios {
+    text-align: center;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 1.7em;
+}
+
+.mapa {
+    margin-bottom: 50px;      
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.mapa iframe {
+    width: 200px;
+}
+
+.form {
+    padding: 10px 20px;
+    margin-bottom: 20px;
+}
+
+.img-grid
+.horarios
+.mapa 
+.form
+
+
+
 /* Fin section de pagina Contacto.html */
+
+
 
 /* Inicio Footer */
 footer{ 
