--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,19 @@ button a i {
     background-size: cover;
     text-align: center;    
     gap: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
+
+.main h1 {
+    color: #afe045;
+
+}
+
+
 .section1{
     grid-area: section1;}
 .section2{
@@ -285,9 +297,6 @@ button a i {
     }
 }
 
-.main h1 {
-    margin-top: 150px;
-}
 
 .section1 {
     padding: 10px;    
@@ -298,7 +307,6 @@ button a i {
     justify-content: center;
     gap: 10px;
     border: 1px solid white;
-
 }
 
 .boton {
@@ -628,6 +636,22 @@ table h1 {
 .horarios__img {
     width: 70%;
     height: 50vh;
+    transition: .5s;
+    object-fit: fit;
+}
+.horarios__img:hover {
+    transform: scale(1.1);
+}
+
+.horarios h3 {
+    font-size: 1.7em;
+    color: #f1f1f1
+}
+
+.horarios ul {
+    font-size: 1.5em;
+    gap: 10px;
+    
 }
 
 .horarios__container {    
@@ -636,6 +660,7 @@ table h1 {
     text-align: center;
     justify-content: center;
     align-items: center;
+     
 }
 
 .horarios {
@@ -671,6 +696,11 @@ table h1 {
 .form h2 {
     margin-bottom: 10px;
     color: #afe045;
+}
+
+.form p {
+    font-size: 1.5em;
+
 }
 
 @media screen and (min-width: 992px) {
