--- a/sass/style.scss
+++ b/sass/style.scss
@@ -307,27 +307,36 @@
   
   /* Fin Header + NAV */
   
-  .header {
-    grid-area: header;
-  }
   
   .main {
     grid-area: main;
-    height: 50vh;
+    text-align: center;
+    gap: 10px;    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;    
+  }
+
+  .section0 {    
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/header/background.jpg);
-    background-repeat: norepeat;
     background-position: center;
     background-size: cover;
+    padding: 50px;
+    h1 {
+      color: #afe045;
+    }        
     text-align: center;
-    gap: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-  
-    h1 {
-      color: #afe045;
-    }
+    align-items: center;  
+  }
+
+  .header {
+    grid-area: header;
+  }
+  .section0 {    
+    grid-area: section0;
   }
   
   .section1 {
@@ -345,19 +354,32 @@
   .footer {
     grid-area: footer;
   }
-  
-  .container {
+
+  .containerIndex {
     display: grid;
-    grid-template-columns: auto;
-    grid-template-areas: "header" "main" "section1" "section2" "section3" "footer";
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+    "header"
+    "main"
+    "footer";
   }
   
   @media screen and (min-width: 992px) {
-    .container {
+    .containerIndex {
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: auto;
-      grid-template-areas: "header header header" "main main main" "section1 section1 section2" "section3 section3 section3" "footer footer footer";
+      grid-template-areas: 
+      "header header header"
+      "main main main"
+      "footer footer footer";
     }
+    .main {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-areas:
+      "section0 section0 section1 section1"
+      "section2 section2 section1 section1"
+      "section3 section3 section3 section3";    }
   }
   
   .section1 {
@@ -422,29 +444,25 @@
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    height: 50vh;
+    height: 40vh;
     color: #ffffff;
     background-image: url("../img/catalogo/reprocann.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    object-fit: cover;
   }
   
-  main section h2, p {
+  .sectionRepro1 {
     text-align: center;
     padding: 5px 0px;
     color: #dddddd;
+    padding: 20px;
   }
   
   #galeriaFotos {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  
+    gap: 1em;
+    margin-bottom: 10px;
     p {
       border-radius: 5px;
       box-shadow: inset #000000 0px 0px 5px 1px;
@@ -453,21 +471,45 @@
       padding: 5px;
     }
   }
-  
-  .galeria {
-    margin: 10px 10px;
+
+  @media screen and (min-width: 992px) {
+    #galeriaFotos {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-areas: 
+      "galeria1 galeria2 galeria3"
+      "galeria4 galeria5 galeria6";
+    }
+  }
+
+  @mixin galerias {
     box-shadow: 0px 4px 10px 0 #afe045;
-    width: 33%;
-    height: 100%;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-  
+    flex-wrap: wrap; 
     img {
       width: 100%;
     }
   }
-  
+
+  .galeria1 {
+    @include galerias();
+  }
+  .galeria2 {
+    @include galerias();
+  }
+  .galeria3 {
+    @include galerias();
+  }
+  .galeria4 {
+    @include galerias();
+  }
+  .galeria5 {
+    @include galerias();
+  }
+  .galeria6 {
+    @include galerias();
+  }
   .pie {
     text-align: center;
     padding: 5px;
@@ -482,49 +524,62 @@
       color: #849d4f;
     }
   }
+
+  .sectionbtn {
+    text-align: center;
+  }
   
   /* Cierre section de página Reprocann.html */
   
   /* Inicio section de pagina Tablas.html */
   
   /* Tabla de Cultivos */
-  
-  table {
-    width: 100%;
-  
-    td {
-      padding: 10px;
-      color: #f1f1f1;
-    }
-  
-    border: 2px solid #afe045;
-    text-align: center;
-    border-collapse: collapse;
-  }
-  
+
+table {
+  width: 100%; 
+  border: 2px solid #afe045;
+  text-align: center;
+  border-collapse: collapse;
+
   td {
+    padding: 10px;
+    color: #f1f1f1;      
     border: 2px solid #afe045;
     text-align: center;
     border-collapse: collapse;
   }
-  
-  table {
-    a {
-      font-size: 1.5em;
-      padding: 5px;
-  
-      &:hover {
-        color: #afe045;
-        border-radius: 5px;
-        border: #000000 2px solid;
+
+  a {
+    font-size: 1.5em;
+    padding: 5px;
+
+    &:hover {
+      color: #afe045
+    }
+  }
+
+  h1 {
+    color: #f8f8f8;
+    padding: 5px;
+  }
+}
+
+
+  @media screen and (min-width: 992px) {
+    table {
+      a {
+        font-size: 1.5em;
+        padding: 5px;
+      }
+    
+      td a:hover {
+          color: #afe045;
+          border-radius: 5px;
+          border: #000000 2px solid;
       }
     }
-  
-    h1 {
-      color: #f8f8f8;
-      padding: 5px;
-    }
   }
+
   
   /* Tabla de Cultivos */
   
@@ -871,7 +926,7 @@
       height: 25px;
     }
   }
+
   
   /* FIN Div footer para el p+redes de la derecha*/
-  
-  /* Termina Footer */
+ 
