--- a/sass/style.css
+++ b/sass/style.css
@@ -160,6 +160,7 @@ input, textarea {
   background-color: #293a22;
   border: 1px solid #afe045;
   margin: 5px;
+  text-align: center;
 }
 .btn a {
   color: #dddddd;
@@ -193,152 +194,6 @@ button a i {
 
 /* Pagina activa actualmente en nuestro NAV */
 /* Inicio Header + NAV */
-.header {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 25px;
-  background-color: #172b1a;
-}
-
-.logo a {
-  display: block;
-}
-.logo a img {
-  display: block;
-  width: 100%;
-}
-
-.navigation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.menu {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  align-items: center;
-  z-index: 1;
-  transition: 0.5s;
-}
-
-.container__logo-img {
-  width: 90px;
-  height: 90px;
-  padding: 5px;
-}
-
-.menu li {
-  list-style-type: none;
-}
-.menu li a {
-  color: #fff;
-  text-decoration: none;
-  display: block;
-  padding: 20px 25px;
-  font-size: 18px;
-  line-height: 1;
-  transition: 0.3s;
-}
-.menu li a:hover {
-  border-bottom: #afe045 solid 1px;
-  border-radius: 5px;
-}
-
-.hamburguesa {
-  position: relative;
-  width: 30px;
-  height: 4px;
-  background-color: #fff;
-  cursor: pointer;
-  z-index: 2;
-  transition: 0.3s;
-}
-.hamburguesa:before, .hamburguesa:after {
-  content: "";
-  position: absolute;
-  height: 4px;
-  right: 0;
-  background-color: #fff;
-  border-radius: 10px;
-  transition: 0.3s;
-}
-.hamburguesa:before {
-  top: -10px;
-  width: 20px;
-}
-.hamburguesa:after {
-  top: 10px;
-  width: 20px;
-}
-
-.toggle-menu {
-  position: absolute;
-  width: 30px;
-  height: 100%;
-  z-index: 3;
-  cursor: pointer;
-  opacity: 0;
-}
-
-.hamburguesa, .toggle-menu {
-  display: none;
-}
-
-.navigation input:checked ~ .hamburguesa {
-  background-color: transparent;
-}
-.navigation input:checked ~ .hamburguesa::before {
-  top: 0;
-  transform: rotate(-45deg);
-  width: 30px;
-}
-.navigation input:checked ~ .hamburguesa::after {
-  top: 0;
-  transform: rotate(45deg);
-  width: 30px;
-}
-.navigation input:checked ~ .menu {
-  right: 0;
-}
-
-@media screen and (max-width: 992px) {
-  .hamburguesa, .toggle-menu {
-    display: block;
-  }
-  .header {
-    padding: 10px 20px;
-  }
-  .menu {
-    justify-content: start;
-    flex-direction: column;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    right: -300px;
-    background-color: #172b1a;
-    height: 100%;
-    padding-top: 120px;
-    width: 300px;
-  }
-  .menu li {
-    width: 100%;
-  }
-  .menu li a {
-    padding: 20px;
-    font-size: 1.7em;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-  }
-  .menu li a:hover {
-    padding: 20px;
-    font-size: 1.7em;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-  }
-}
 /* Fin Header + NAV */
 /* Inicio Index.html  */
 .main {
@@ -598,8 +453,7 @@ table h1 {
 /* Inicio Tabla Azteka Seccion  */
 #tabla__img-header img {
   width: 100%;
-  height: 90vh;
-  margin-bottom: 50px;
+  height: 60vh;
 }
 
 .container__tabla {
@@ -648,6 +502,15 @@ table h1 {
 .topcrop {
   color: #fcab2d;
   font-size: 3em;
+}
+
+@media screen and (max-width: 992px) {
+  #tabla__img-header {
+    display: none;
+  }
+}
+#tabla__azteka {
+  margin-top: 20px;
 }
 
 /* Fin section de pagina Tablas.html */
