--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -7,3 +7,16 @@
       width: 100%;
     }
   }
+
+@mixin boton {  
+  border-radius: 5px;
+  box-shadow: inset #000000 0px 0px 5px 1px;
+  background-color: $Background;
+  border: 1px solid $Acento;
+  text-decoration: none;
+
+  a {
+    color: $Blanco;
+  }
+  
+}
