--- a/sass/style.scss
+++ b/sass/style.scss
@@ -113,20 +113,7 @@
     font-family: 'Roboto', sans-serif;
   }
   
-  /* Diseño boton volver a inicio */
-  
-  // .btn {
-  //   border-radius: 5px;
-  //   box-shadow: inset #000000 0px 0px 5px 1px;
-  //   background-color: $Background;
-  //   border: 1px solid $Acento;
-  //   margin: 5px;
-  //   text-align: center;
-  
-  //   a {
-  //     color: $Blanco;
-  //   }
-  // }
+  /* Diseño boton */
 
   .btn {
     @include boton();
@@ -314,7 +301,6 @@
   }
   
   #galeriaFotos {
-    gap: 10em;
     p {
       border-radius: 5px;
       box-shadow: inset #000000 0px 0px 5px 1px;
@@ -322,16 +308,7 @@
       border: 1px solid $Acento;
       padding: 5px;
     }
-  }
-  
-  @mixin galerias {
-    box-shadow: 0px 4px 10px 0 $Acento;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap; 
-    img {
-      width: 100%;
-    }
+    
   }
   
 .galeria1 {
@@ -369,6 +346,7 @@
 
   .sectionbtn {
     text-align: center;
+    padding: 10px 5px;
   }
   
   /* Cierre section de página Reprocann.html */
@@ -437,6 +415,7 @@ table {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  
   
     img {
       width: 100%;
