--- a/sass/style.scss
+++ b/sass/style.scss
@@ -187,8 +187,7 @@ button {
   height: 50vh;
   grid-area: section0;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/header/background.jpg);
-  background-position: center;
-  background-size: cover;
+  @include bgImg;
   padding: 50px;
   text-align: center;
   flex-direction: column;
@@ -268,9 +267,7 @@ button {
   height: 50vh;
   gap: 10px;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/catalogo/fertilizantes.jpg);
-  background-position: cover;
-  background-repeat: no-repeat;
-  background-size: cover;
+  @include bgImg;
   flex-direction: column;
   @include flexible;
   padding: 10px;
@@ -287,9 +284,7 @@ button {
   height: 40vh;
   color: $Blanco;
   background-image: url("../img/catalogo/reprocann.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  @include bgImg;
   object-fit: cover;
 }
 
@@ -574,12 +569,6 @@ table {
   height: 100vh;
 }
 
-.sustratoP {
-  background-image: url(/img/productos/sustratos/sustratos.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-}
 
 
 /* Fin section sustrato.html */
